--- a/z-web/build.gradle
+++ b/z-web/build.gradle
@@ -29,5 +29,6 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.cc.android:multi-progress:1.0.0'
 }
+
+apply from: "upload.gradle"
