--- a/z-web/cc-upload.properties
+++ b/z-web/cc-upload.properties
@@ -3,6 +3,6 @@ PASSWORD=fMTKbe0WP6
 GROUP_ID=com.cc.android
 MAVEN_REPO_SNAPSHOT_URL=https://repo.rdc.aliyun.com/repository/129757-snapshot-xquDm2
 MAVEN_REPO_RELEASE_URL=https://repo.rdc.aliyun.com/repository/129757-release-BhhDH6
-ARTIFACT_ID=screen-recorder
-VERSION=1.0.1
-DESC= Simple to use but support powerful screen recording, support Android 10+, support automatic saving to albums.
+ARTIFACT_ID=webView
+VERSION=1.0.0
+DESC= A package library that handles common WebView intractables and provides safe, reliable and convenient WebView access.
