--- a/z-web/upload.properties
+++ b/z-web/upload.properties
@@ -3,7 +3,6 @@ PASSWORD=123456
 GROUP_ID=com.zj.repo
 MAVEN_REPO_SNAPSHOT_URL=http://www.jqyard.cn:8081/repository/zjj-snapshot/
 MAVEN_REPO_RELEASE_URL=http://www.jqyard.cn:8081/repository/zjj-release/
-ARTIFACT_ID=screen-recorder
-VERSION=1.0.1
-DESC= Simple to use but support powerful screen recording, support Android 10+, support automatic saving to albums.
-
+ARTIFACT_ID=webView
+VERSION=1.0.0
+DESC= A package library that handles common WebView intractable and provides safe, reliable and convenient WebView access.
